[package]
name = "libwebp-sys2"
version = "0.1.1-alpha.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
links = "webp"
build = "build.rs"
edition = "2018"

description = "A handwritten raw interface to libwebp"
homepage = "https://github.com/qnighy/libwebp-sys2-rs"
repository = "https://github.com/qnighy/libwebp-sys2-rs"
readme = "README.md"
keywords = ["webp", "image"]
categories = ["external-ffi-bindings", "multimedia", "multimedia::images"]
license = "BSD-3-Clause"

[badges]
travis-ci = { repository = "qnighy/libwebp-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "qnighy/libwebp-rs" }
is-it-maintained-open-issues = { repository = "qnighy/libwebp-rs" }

[lib]
name = "libwebp_sys"

[dependencies]
cfg-if = "0.1.6"
libc = "0.2.43"

[features]
default = []
demux = []
mux = []
"0_5" = []
"0_6" = ["0_5"]
"1_1" = ["0_6"]
static = []
extern-types = []
__doc_cfg = ["1_1", "demux", "mux"]

[package.metadata.docs.rs]
features = ["1_1", "demux", "mux", "__doc_cfg", "extern-types"]

[build-dependencies]
pkg-config = "0.3.17"
cc = "1.0.50"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.8"
