[package]
name = "libwebp-sys2"
version = "0.1.8"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
links = "webp"
build = "build.rs"
edition = "2018"

description = "A handwritten raw interface to libwebp"
homepage = "https://github.com/qnighy/libwebp-sys2-rs"
repository = "https://github.com/qnighy/libwebp-sys2-rs"
readme = "README.md"
keywords = ["webp", "image"]
categories = ["external-ffi-bindings", "multimedia", "multimedia::images"]
# Note, the vendored source (c_src) is also distributed under BSD-3-Clause with Google as its copyright holder.
license = "BSD-3-Clause"

[badges]
travis-ci = { repository = "qnighy/libwebp-sys2-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "qnighy/libwebp-sys2-rs" }
is-it-maintained-open-issues = { repository = "qnighy/libwebp-sys2-rs" }

[lib]
name = "libwebp_sys"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.43"

[features]
default = []
demux = []
mux = []
"0_5" = []
"0_6" = ["0_5"]
"1_1" = ["0_6"]
"1_2" = ["1_1"]
static = []
extern-types = []
__doc_cfg = ["1_2", "demux", "mux"]

[package.metadata.docs.rs]
features = ["1_2", "demux", "mux", "__doc_cfg", "extern-types"]

[build-dependencies]
pkg-config = "0.3.17"
cc = "1.0.50"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.8"
