[package]
name = "libwebp-image"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

[dependencies]
libwebp = { path = "..", default-features = false }
image = "0.23"

[features]
default = []
"libwebp-0.5" = ["libwebp/0.5"]
"libwebp-0.6" = ["libwebp/0.6", "libwebp-0.5"]
"libwebp-1.1" = ["libwebp/1.1", "libwebp-0.6"]
