[package]
name = "libwebp-sys"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1.6"
libc = "0.2.43"

[features]
default = []
demux = []
mux = []
"0.5" = []
"0.6" = ["0.5"]
"1.1" = ["0.6"]
"bundled" = ["cc", "1.1"]

[build-dependencies]
cc = { version = "1.0.25", optional = true }
