[package]
name = "libwebp-sys"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
links = "webp"
build = "build.rs"
edition = "2018"

[dependencies]
cfg-if = "0.1.6"
libc = "0.2.43"

[features]
default = []
demux = []
mux = []
"0.5" = []
"0.6" = ["0.5"]
"1.1" = ["0.6"]
static = []
__doc_cfg = ["1.1", "demux", "mux"]

[build-dependencies]
pkg-config = "0.3.17"
cc = "1.0.50"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.8"
